--- a/application/config/config.ini
+++ b/application/config/config.ini
@@ -28,7 +28,7 @@
 ; To enable translations, the identifier must also have a
 ; corresponding .mo file in the application/languages directory.
 
-locale.name = ""
+locale.name = "fi_FI"
 
 ;;;;;;;;;;;;;
 ; Debugging ;
@@ -238,8 +238,8 @@ mail.transport.type = "Sendmail"
 ; Set the maximum file upload size.
 ; default: 10M
 ;
-; Uncomment the following line to set the maximum file upload size. This 
-; configuration will not exceed the maximum beyond what is set in the 
+; Uncomment the following line to set the maximum file upload size. This
+; configuration will not exceed the maximum beyond what is set in the
 ; 'post_max_size' or 'upload_max_filesize' core php.ini directives.
 ;
 ;upload.maxFileSize = "10M"
