--- a/db.ini
+++ b/db.ini
@@ -13,7 +13,7 @@
 host     = "localhost"
 username = "maria"
 password = "pe1971tE"
-dbname   = "omeka"
-prefix   = "omeka_"
+dbname   = "omeka_aino"
+prefix   = "omeka_aino_"
 charset  = "utf8"
 ;port     = ""
